--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
             {%if user.is_authenticated%}
             <li><a href="{%url 'home'%}">Submitted Reports</a></li>
             <li><a href="{%url 'add-report'%}">Add Report</a></li>
+            <li><a href="{%url 'location-reports'%}">Location Reports</a></li>
               <li><a href="{%url 'logout'%}">Logout</a></li>
             {%else%}
               <li><a href="{%url 'register'%}" >Register</a></li>
