--- a/templates/hazards/report_view.html
+++ b/templates/hazards/report_view.html
@@ -74,7 +74,7 @@
     <br>
     <br>
     {%empty%}
-    No reports Submitted by you yet!
+        {{empty_message}}
     {% endfor %}
 {% endblock content %}
 
